[gd_scene load_steps=11 format=2]

[ext_resource path="res://actors/environments/Card.tscn" type="PackedScene" id=1]
[ext_resource path="res://map/draft/DraftCardGraphicNode.gd" type="Script" id=2]
[ext_resource path="res://assets/map/selector.png" type="Texture" id=3]
[ext_resource path="res://assets/icon/minicards/star.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/bungee/Bungee-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Commando/commando.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sprites/cards/card_mystery.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 96
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 5 )

[node name="DraftCard" instance=ExtResource( 1 )]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )
take_ownership = true
multiple_owners = true
float_when_selected = false

[node name="Background" parent="Ground/Front" index="0"]
modulate = Color( 0.901961, 0.901961, 0.901961, 1 )

[node name="Border" parent="Ground/Front" index="3"]
visible = true

[node name="Mystery" type="Sprite" parent="Ground/Front" index="5"]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="MinigameIconShadow" type="Sprite" parent="Ground/Front" index="8"]
modulate = Color( 0, 0, 0, 0.313726 )
position = Vector2( 0, -28 )

[node name="MinigameIcon" type="Sprite" parent="Ground/Front" index="9"]
position = Vector2( 0, -36 )

[node name="MinigameLabelWrapper" type="Node2D" parent="Ground/Front" index="10"]
position = Vector2( 0, 14 )
scale = Vector2( 0.5, 0.5 )

[node name="MinigameLabel" type="Label" parent="Ground/Front/MinigameLabelWrapper" index="0"]
modulate = Color( 1, 0.870588, 0.372549, 1 )
self_modulate = Color( 0.92, 0.92, 0.92, 1 )
margin_left = -900.0
margin_top = 20.0
margin_right = 900.0
margin_bottom = 334.0
custom_colors/font_color_shadow = Color( 1, 0.533333, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "MINIGAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WinterLabel" type="Label" parent="Ground/Front/MinigameLabelWrapper" index="1"]
modulate = Color( 0.615686, 0.921569, 1, 1 )
self_modulate = Color( 0.92, 0.92, 0.92, 1 )
margin_left = -900.0
margin_top = -63.0
margin_right = 900.0
margin_bottom = 251.0
custom_colors/font_color_shadow = Color( 0, 0.533333, 0.964706, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 4 )
text = "WINTER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewLabel" type="Label" parent="Ground/Front/MinigameLabelWrapper" index="2"]
visible = false
modulate = Color( 1.2, 1.2, 1.2, 1 )
self_modulate = Color( 1, 0.870588, 0.372549, 1 )
margin_left = -900.0
margin_top = -580.0
margin_right = 900.0
margin_bottom = -266.0
custom_fonts/font = SubResource( 3 )
text = "NEW!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sprite" type="Sprite" parent="Ground/Front/MinigameLabelWrapper/NewLabel" index="0"]
position = Vector2( 776, 157 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="Ground/Front/MinigameLabelWrapper/NewLabel" index="1"]
position = Vector2( 1024, 157 )
texture = ExtResource( 4 )

[node name="Select" type="Sprite" parent="Ground" index="3"]
visible = false
position = Vector2( 0, 275 )
rotation = 3.14159
z_index = 2000
z_as_relative = false
texture = ExtResource( 3 )
